tests/static/fail/internal/3.0.c
int main(void) {
      static void f(void);
      return 0;
}
